Add Spring support and develop an API, replace Hibernate with Spring data JPA